# cykusz-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  Xargo.toml  bochsrc.txt  bootstrap.sh  cleanup.sh  commit_all.sh  create_disk.sh  create_vbox_vm.sh  remove_trailing_whitespace.sh  update_core_nightly.sh  x86_64-cykusz_os.json  x86_64-unknown-none-gnu.json
cykusz-rs/: Cargo.toml
cykusz-rs/.cargo/: config.toml
cykusz-rs/src/: externs.rs  init_task.rs  lang_items.rs  lib.rs  task_test.rs
cykusz-rs/src/arch/x86_64/: gdt.rs  idt.rs  ipi.rs  mod.rs  signal.rs  smp.rs  syscall.rs  task.rs  time.rs  timer.rs  tls.rs  utils.rs
cykusz-rs/src/arch/x86_64/acpi/: acpi_init.rs  apic.rs  mod.rs  os.rs  pci.rs  rsdp.rs  rsdt.rs  util.rs
cykusz-rs/src/arch/x86_64/acpi/acpica/: ec.rs  int.rs  mem.rs  memio.rs  misc.rs  mod.rs  pci.rs  portio.rs  print.rs  sync.rs  threads.rs
cykusz-rs/src/arch/x86_64/asm/: boot.asm  gdt.asm  gdt.inc  grub.cfg  higher_half.asm  int.asm  linker.ld  long_mode_init.asm  multiboot.asm  paging.asm  regs.inc  sse.asm  switch.asm  syscall.asm
cykusz-rs/src/arch/x86_64/cpu/: fpu.rs  mod.rs
cykusz-rs/src/arch/x86_64/dev/: expci.rs  hpet.rs  ioapic.rs  lapic.rs  mod.rs  pic.rs  pit.rs  rtc.rs  serial.rs
cykusz-rs/src/arch/x86_64/int/: apic.rs  mod.rs  msi.rs  pic.rs
cykusz-rs/src/arch/x86_64/mm/: heap.rs  mod.rs  pat.rs
cykusz-rs/src/arch/x86_64/mm/phys/: alloc.rs  buddy.rs  bump.rs  iter.rs  mod.rs
cykusz-rs/src/arch/x86_64/output/: debug.rs  debug_disabled.rs  mod.rs
cykusz-rs/src/arch/x86_64/raw/: cpuio.rs  ctrlregs.rs  descriptor.rs  gdt.rs  idt.rs  io.rs  mm.rs  msr.rs  newtype.rs  segmentation.rs  task.rs
cykusz-rs/src/arch/x86_64/task/: args.rs  mod.rs
cykusz-rs/src/drivers/: mod.rs  null.rs  random.rs  zero.rs
cykusz-rs/src/drivers/acpi/: mod.rs  pci_map.rs
cykusz-rs/src/drivers/acpi/acpica/: ec.rs  int.rs  mem.rs  memio.rs  misc.rs  mod.rs  pci.rs  portio.rs  print.rs  sync.rs  threads.rs
cykusz-rs/src/drivers/audio/: mod.rs
cykusz-rs/src/drivers/audio/hda/: cmd.rs  mod.rs  node.rs  stream.rs
cykusz-rs/src/drivers/block/: ahci.rs  mod.rs
cykusz-rs/src/drivers/block/ahci/: device.rs  mod.rs  reg.rs  request.rs
cykusz-rs/src/drivers/block/ata/: mod.rs  request.rs
cykusz-rs/src/drivers/block/ide/: drive.rs  mod.rs
cykusz-rs/src/drivers/elf/: mod.rs  types.rs
cykusz-rs/src/drivers/elf/headers/: elf.rs  program.rs
cykusz-rs/src/drivers/input/: keymap.rs  mod.rs  tty.rs
cykusz-rs/src/drivers/input/tty/: input.rs  mod.rs  output.rs
cykusz-rs/src/drivers/multiboot2/: mod.rs
cykusz-rs/src/drivers/multiboot2/tags/: command_line.rs  elf.rs  framebuffer_info.rs  mod.rs
cykusz-rs/src/drivers/net/: e1000.rs  mod.rs
cykusz-rs/src/drivers/net/e1000/: addr.rs  device.rs  mod.rs  regs.rs  test.rs
cykusz-rs/src/drivers/pci/: epci.rs  mod.rs  pci.rs
cykusz-rs/src/drivers/ps2/: i8042.rs  mod.rs
cykusz-rs/src/drivers/ps2/kbd/: handler.rs  mod.rs  scancode.rs
cykusz-rs/src/drivers/ps2/mouse/: handler.rs  mod.rs
cykusz-rs/src/drivers/tty/: color.rs  input.rs  keymap.rs  mod.rs  output.rs  palette.rs
cykusz-rs/src/drivers/video/: fb.rs  mod.rs  vga.rs
cykusz-rs/src/kernel/: device.rs  futex.rs  init.rs  int.rs  ipi.rs  kbd.rs  mod.rs  module.rs  params.rs  session.rs  signal.rs  smp.rs  sync.rs  syscall.rs  task.rs  time.rs  timer.rs  tls.rs  tty.rs
cykusz-rs/src/kernel/block/: mbr.rs  mod.rs
cykusz-rs/src/kernel/device/: block.rs  dev_t.rs  mod.rs
cykusz-rs/src/kernel/fs/: cache.rs  devfs.rs  devnode.rs  dirent.rs  filesystem.rs  icache.rs  inode.rs  mod.rs  mount.rs  mountfs.rs  path.rs  pcache.rs  pipe.rs  poll.rs  ramfs.rs  stdio.rs  vfs.rs
cykusz-rs/src/kernel/fs/ext2/: blockgroup.rs  buf_block.rs  dirent.rs  idata.rs  inode.rs  mod.rs  reader.rs  superblock.rs
cykusz-rs/src/kernel/kbd/: mod.rs
cykusz-rs/src/kernel/mm/: frame.rs  heap.rs  mod.rs  virt.rs
cykusz-rs/src/kernel/net/: arp.rs  dhcp.rs  dns.rs  eth.rs  icmp.rs  ip.rs  mod.rs  packet.rs  socket.rs  tcp.rs  udp.rs  util.rs
cykusz-rs/src/kernel/net/arp/: cache.rs  mod.rs
cykusz-rs/src/kernel/net/tcp/: mod.rs  socket.rs
cykusz-rs/src/kernel/net/udp/: mod.rs  socket.rs
cykusz-rs/src/kernel/net/unix/: mod.rs  socket.rs
cykusz-rs/src/kernel/sched/: cpu_queue.rs  cpu_queues.rs  mod.rs  round_robin.rs  task_container.rs
cykusz-rs/src/kernel/signal/: default.rs  mod.rs
cykusz-rs/src/kernel/sync/: irq_lock.rs  mod.rs  mutex.rs  mutex_rw.rs  raw_spin.rs  semaphore.rs  spin_lock.rs  spin_rw_lock.rs
cykusz-rs/src/kernel/syscall/: mod.rs  sys.rs
cykusz-rs/src/kernel/task/: children_events.rs  cwd.rs  filetable.rs  intrusive_adapter.rs  mod.rs  vm.rs  zombie.rs
cykusz-rs/src/kernel/task/filetable/: inode_wrap.rs  mod.rs
cykusz-rs/src/kernel/utils/: arc_type.rs  buffer.rs  mod.rs  node_map.rs  percpu.rs  slice.rs  spsc_queue.rs  stopwatch.rs  types.rs  vcell.rs  wait_queue.rs
user-alloc/: Cargo.toml
user-alloc/src/: lib.rs  types.rs
userspace/: Cargo.toml  main  maincpp  program  program.asm
userspace/.cargo/: config.toml
userspace/doom/: Cargo.toml  bindwrap.h  build.rs
userspace/doom/src/: cykusz.rs  doomgeneric.rs  keys.rs  main.rs  sound.rs
userspace/doom/src/cykusz/: fb.rs  input.rs
userspace/doom/src/cykusz/audio/: mod.rs  music.rs  sounds.rs
userspace/doom/src/cykusz/input/: kbd.rs  mod.rs  mouse.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/mount/: Cargo.toml
userspace/mount/src/: main.rs
userspace/playaudio/: Cargo.toml
userspace/playaudio/src/: lib.rs
userspace/playwav/: Cargo.toml
userspace/playwav/src/: main.rs
userspace/shell/: Cargo.toml
userspace/shell/src/: file.rs  main.rs  nc.rs
userspace/sound-daemon/: Cargo.toml
userspace/src/: file.rs  lang.rs  lib.rs  main.rs  nc.rs  print.rs  syscall.rs
userspace/syscall-user/: Cargo.toml
userspace/syscall-user/src/: lib.rs  print.rs  util.rs
userspace/testprogs/: Cargo.toml
userspace/umount/: Cargo.toml
userspace/umount/src/: main.rs
userspace/unixsockets/: Cargo.toml
(+226 files in other folders)
