[package]
authors = ["Rafal Mielniczuk <rafal.mielniczuk2@gmail.com>"]
edition = "2018"
name = "cykusz_rs"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "*"
raw-cpuid = "*"
spin = "*"
bit_field = "*"
intrusive-collections = "*"
paste = "*"
mmio = "*"
downcast-rs = { version = "*", default-features = false }
hashbrown = "*"
lru = "*"
vte = "*"
linked_list_allocator = "*"

[dependencies.chrono]
default-features = false
version = "*"

[dependencies.syscall-defs]
path = "../syscall-defs"

[dependencies.acpica]
path = "../acpica"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "*"
