[package]
authors = ["Rafal Mielniczuk <rafal.mielniczuk2@gmail.com>"]
edition = "2021"
name = "cykusz-rs"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[features]
logs = []
default = []

[dependencies]
bitflags = "*"
raw-cpuid = "*"
spin = "*"
bit_field = "*"
intrusive-collections = "*"
paste = "*"
downcast-rs = { version = "*", default-features = false }
hashbrown = "*"
lru = "*"
vte = "*"
mmio = "0.1.0"
linked_list_allocator = "*"

[dependencies.uuid]
default-features = false
version = "*"

[dependencies.rand]
default-features = false
version = "*"
features = ["std_rng", "nightly"]

[dependencies.bitmaps]
default-features = false
version = "*"

[dependencies.chrono]
default-features = false
version = "*"

[dependencies.syscall-defs]
path = "../syscall-defs"

[dependencies.acpica]
path = "../acpica"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "*"
