[package]
authors = ["Rafal Mielniczuk <rafal.mielniczuk2@gmail.com>"]
edition = "2021"
name = "cykusz-rs"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[features]
logs = []
default = ["logs"]

[dependencies]
tock-registers = "*"
bitflags = "*"
raw-cpuid = "*"
spin = "*"
bit_field = "*"
intrusive-collections = "*"
paste = "*"
downcast-rs = { version = "*", default-features = false, features=["sync"]}
hashbrown = "*"
lru = "*"
vte = "*"
linked_list_allocator = "*"
bbqueue = "*"

[dependencies.uuid]
default-features = false
version = "*"

[dependencies.rand]
default-features = false
version = "*"
features = ["std_rng", "nightly"]

[dependencies.bitmaps]
default-features = false
version = "*"

[dependencies.chrono]
default-features = false
version = "*"

[dependencies.syscall-defs]
path = "../syscall-defs"

[dependencies.acpica]
path = "../acpica"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "*"
