[package]
name = "user_alloc"
version = "0.1.0"
authors = ["Rafal Mielniczuk <rafal.mielniczuk2@gmail.com>"]
edition = "2018"

[dependencies]
rlibc = "*"
spin = "*"
linked_list_allocator = "*"

[dependencies.syscall-defs]
path = "../syscall-defs"
[dependencies.syscall-user]
path = "../syscall-user"
