[package]
name = "program"
version = "0.1.0"
authors = ["Rafal Mielniczuk <rafal.mielniczuk2@gmail.com>"]
edition = "2018"

[dependencies]
rlibc = "*"

[dependencies.chrono]
default-features = false
version = "*"

[dependencies.syscall-defs]
path = "../syscall-defs"
[dependencies.syscall-user]
path = "../syscall-user"
