[package]
name = "program"
version = "0.1.0"
authors = ["Rafal Mielniczuk <rafal.mielniczuk2@gmail.com>"]
edition = "2021"

[dependencies]
rlibc = "*"

[dependencies.chrono]
default-features = false
version = "=0.4.19"

[dependencies.user_alloc]
path = "../user-alloc"
[dependencies.syscall-defs]
path = "../syscall-defs"
[dependencies.syscall-user]
path = "../syscall-user"
