[package]
name = "doom"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "*"
rustysynth = "*"

[dependencies.fon]
git = "https://github.com/rafalmiel/fon.git"
branch = "cykusz"

[dependencies.kittyaudio]
features = []
default-features = false
version = "*"

[dependencies.syscall-defs]
path = "../../syscall-defs"

[dependencies.syscall-user]
path = "../syscall-user"

[dependencies.playaudio]
path = "../playaudio"

[build-dependencies]
bindgen = "*"
cc = "1.0"
