[package]
name = "playaudio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "play"
test = false
bench = false
path = "src/play/bin/main.rs"

[[bin]]
name = "playmidi"
test = false
bench = false
path = "src/playmidi/bin/main.rs"

[dependencies]
rustysynth = "*"

[dependencies.fon]
git = "https://github.com/rafalmiel/fon.git"
branch = "cykusz"

[dependencies.kittyaudio]
features = ["symphonia"]
default-features = false
version = "*"

[dependencies.syscall-defs]
path = "../../syscall-defs"

[dependencies.syscall-user]
path = "../syscall-user"
