[package]
name = "testprogs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forktest"
test = false
bench = false
path = "src/forktest/bin/main.rs"

[[bin]]
name = "mprotecttest"
test = false
bench = false
path = "src/mprotect/bin/main.rs"

[[bin]]
name = "threads"
test = false
bench = false
path = "src/threads/bin/main.rs"

[dependencies.syscall-defs]
path = "../../syscall-defs"

[dependencies.syscall-user]
path = "../syscall-user"
